--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@
   --cinza-azuldo: #3d5866;
   --cina-taupe-neutro: #9e9d89;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   background-color: var(--verde-salvia);
   color: #333;
@@ -161,6 +163,8 @@ form button:hover {
   height: 100vh;
   overflow: hidden;
   z-index: 1;
+  display: flex;
+  flex-direction: row;
 }
 
 /* Cria a sombra por cima do background */
@@ -194,6 +198,9 @@ form button:hover {
   align-items: center;
 
 }
+.cta h2 {
+  color: #fff;
+}
 .midias {
   display: flex;
   flex-direction: column;
@@ -201,15 +208,21 @@ form button:hover {
   justify-content: center;
   align-items: center;
   padding: 20px;
+  
 
+}
+.redes-sociais h2 {
+  color: #fff;
+  z-index: 99;
+  
 }
 .midias a {
   font-size: 23px;
   text-decoration: none;
-  color: #1d1d1d;
+  color: #fff;
   font-weight: 300;
   border-radius: 12px;
-  border: 1px solid #1d1d1d;
+  border: 1px solid #fff;
   text-align: center;
   padding: 10px;
   display: flex;
@@ -219,6 +232,7 @@ form button:hover {
 }
 .midias img {
   width: 32px;
+  
 }
 
 footer {
