--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ body {
 
 .hero {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0,0,0,0.7)), url(./assets/images/bg-hero-2.png);
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   color: #fff;
   line-height: 1;
@@ -558,4 +558,56 @@ footer {
 }
 .video-section {
   text-align: center;
+}
+
+@media screen and (max-width: 1020px){
+  .hero {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .hero .container {
+    width: 100%;
+    text-align: center;
+    padding: 0;
+  }
+ .sobre-img {
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
+  background-color: var(--marinho-sutil);
+  border: 6px solid rgb(19, 255, 19);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: -80px;
+  transform: translateY(-20%);
+  transform: translateX(-40%);
+  z-index: 2;
+  
+}
+.sobre .flex-container {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+  .video-normal {
+    width: 100%;
+  }
+  .redes-sociais {
+    display: flex;
+    flex-direction: column;
+  }
+  #contato  {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
 }
