--- a/style.css
+++ b/style.css
@@ -300,7 +300,11 @@ footer {
 .second-section {
   background-color: var(--verde-salvia);
 }
-
+.problemas-header {
+  padding: 40px 4%;
+  max-width: 1020px;
+  margin: 0 auto;
+}
 .problemas-header h2 {
   font-size: 2rem;
   margin-bottom: 40px;
@@ -315,6 +319,9 @@ footer {
   justify-content: center;
   align-items: stretch;
   margin: 0 auto;
+}
+.problemas-section .btn {
+  margin: 10px auto;
 }
 
 .problema {
@@ -591,13 +598,28 @@ footer {
   transform: translateY(-20%);
   transform: translateX(-40%);
   z-index: 2;
-  
+  margin: 0 auto;
 }
-.sobre .flex-container {
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-}
+.flex-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .container {
+    max-width: 90%;
+    
+  }
+
+  .sobre-img-wrapper {
+    margin-top: 2rem;
+  }
+
+  .sobre-img span {
+    display: block;
+    margin-top: 1rem;
+  }
   .video-normal {
     width: 100%;
   }
