--- a/style.css
+++ b/style.css
@@ -261,23 +261,26 @@ form button:hover {
 
 }
 .redes-sociais h2 {
-  color: #fff;
+  color: white;
   z-index: 99;
   
 }
+
 .midias a {
   font-size: 23px;
   text-decoration: none;
   color: #fff;
   font-weight: 300;
   border-radius: 12px;
-  border: 1px solid #fff;
   text-align: center;
-  padding: 10px;
+  padding: 20px 4%;
   display: flex;
   align-items: center;
   justify-content: space-around;
   max-width: 250px;
+  font-family: 'Poppins', sans-serif;
+  gap: 1rem;
+  box-shadow: 3px 5px 3px #fff;
 }
 .midias img {
   width: 32px;
@@ -508,6 +511,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
 } 
 .sobre .container p {
   width: 100%;
@@ -522,11 +526,13 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 3px 5px 3px #000;
+  
 }
 
 .sobre-img {
-  width: 320px;
-  height: 320px;
+  width: 340px;
+  height: 340px;
   border-radius: 50%;
   background-color: var(--marinho-sutil);
   border: 6px solid rgb(19, 255, 19);
@@ -536,18 +542,22 @@ footer {
   justify-content: center;
   text-align: center;
   position: absolute; 
-  top: -160px; 
+  top: -175px; 
   transform: translateY(-50%);
   z-index: 2;
+  box-shadow: 3px 5px 3px #000;
   
 }
 .sobre-img span {
-  width: 180px;
+  width: 100%;
+  max-width: 380px;
   background-color: white;
   font-size: 23px;
   margin-top: -30px;
   z-index: 1;
-  border-radius: 12px;
+  border-radius: 12px;  
+  box-shadow: 3px 5px 3px #000;
+  padding: 10px;
   
 }
 
