--- a/style copy.css
+++ b/style copy.css
@@ -31,18 +31,15 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: #1d1d1d;
+  background-color: var(--verde-salvia);
   color: #333;
   line-height: 1.3;
 }
 
-
 .container {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
-  padding-top: 20px;
-  display: flex;
-  flex-direction: column;
+  padding: 20px;
 }
 
 .hero {
@@ -59,50 +56,31 @@ body {
 
 
 .hero h1 {
-  font-size: 3rem;
+  font-size: 68px;
   margin-bottom: 10px;
-  font-family: 'Montserrat', sans-serif;
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  text-shadow: 1px 1px 1px var(--verde-salvia);
 }
 
 .hero p {
-  font-size: 28px;
+  font-size: 32px;
   margin-bottom: 20px;
-  font-family: 'Poppins', sans-serif;
 }
 
-.hero-containers {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-}
 
 nav.navbar {
   width: 100%;
-  background-color: #1d1d1d;
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: 500;
-  font-size: 18px;
+  background-color: var(--verde-salvia);
+  color: white;
+  font-size: 22px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 15px 30px;
   position: relative;
-  font-family: 'Roboto', sans-serif;
-  text-transform: uppercase;
 }
 
 .logo {
   font-weight: bold;
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: 'Montserrat', sans-serif;
 }
 
 .menu {
@@ -116,8 +94,8 @@ nav a {
   transition: 0.3s ease;
 }
 nav a:hover {
-  letter-spacing: 0.01rem;
-  color: var(--verde-salvia);
+  letter-spacing: 0.4rem;
+  color: gold;
 }
 
 .hamburger {
@@ -172,7 +150,6 @@ nav a:hover {
   transition: background-color 0.3s ease;
   box-shadow: 3px 5px 3px #1d1d1d;
   margin-top: 40px;
-  width: fit-content;
 }
 
 .btn:hover {
@@ -181,8 +158,9 @@ nav a:hover {
 
 section {
   padding: 60px 20px;
-  
+  max-width: 1220px;
   margin: 0 auto;
+  border-bottom: 1px solid #e0e0e0;
 }
 
 section:nth-of-type(even) {
@@ -252,6 +230,13 @@ form button:hover {
   pointer-events: none; /* permite clicar nos elementos abaixo */
 }
 
+/* Garante que o conteúdo fique acima da sombra */
+.cta.overlay .container,
+.cta.overlay .midias {
+  position: relative;
+  z-index: 3;
+  color: white; /* garante legibilidade */
+}
 .cta {
   background-image: url(./assets/images/leandro-escritorio.png);
   background-size: cover;
@@ -266,23 +251,20 @@ form button:hover {
 .cta h2 {
   color: #fff;
 }
-
-
-.redes-sociais h2 {
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  z-index: 99;
-  text-transform: uppercase;
-  font-size: 2.5rem;
-  
-}
 .midias {
   display: flex;
+  flex-direction: column;
   gap: 1rem;
   justify-content: center;
   align-items: center;
   padding: 20px;
+  
+
+}
+.redes-sociais h2 {
+  color: white;
+  z-index: 99;
+  
 }
 
 .midias a {
@@ -296,7 +278,7 @@ form button:hover {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  max-width: fit-content;
+  max-width: 250px;
   font-family: 'Poppins', sans-serif;
   gap: 1rem;
   box-shadow: 3px 5px 3px #fff;
@@ -307,13 +289,10 @@ form button:hover {
 }
 
 footer {
-  background-color: #1d1d1d;
+  background-color: var(--verde-salvia);
   color: white;
   text-align: center;
   padding: 20px;
-}
-footer .container p {
-  font-size: 1.5rem;
 }
 .faq-section {
   max-width: 700px;
@@ -324,16 +303,12 @@ footer .container p {
 
 .faq-section h2 {
   text-align: center;
-  font-size: 3rem;
-  text-transform: uppercase;
+  font-size: 2em;
   margin-bottom: 30px;
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  color: #333;
 }
 
 .faq-item {
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
   margin-bottom: 15px;
   border-radius: 10px;
   overflow: hidden;
@@ -344,38 +319,30 @@ footer .container p {
   width: 100%;
   padding: 15px 20px;
   text-align: left;
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
+  background-color: #f5f5f5;
   border: none;
   outline: none;
   font-size: 1.1em;
   font-weight: bold;
   cursor: pointer;
-  transition: background-color 0.5s;
-  font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
-  text-align: center;
+  transition: background-color 0.3s;
 }
 
 .faq-question:hover {
-  background: linear-gradient(to left, #fff, rgb(92, 239, 92));
-  
+  background-color: #e0e0e0;
 }
 
 .faq-answer {
   max-height: 0;
   overflow: hidden;
-  background: linear-gradient(to right, #a5dda5, rgb(18, 88, 18));
+  background-color: #fff;
   padding: 0 20px;
   transition: max-height 0.4s ease, padding 0.4s ease;
-  text-align: center;
 }
 
 .faq-answer p {
-  margin: 15px auto;
-  font-weight: 500;
-  color: #fff;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.2rem;
+  margin: 15px 0;
+  color: #444;
 }
 
 
@@ -400,7 +367,7 @@ footer .container p {
 }
 
 
-.hero img {
+.container-2 img {
     max-width: 600px;
     filter: drop-shadow(0 20px 30px rgba(168, 195, 160, 0.6)); /* brilho verde suave abaixo */
 
@@ -408,56 +375,22 @@ footer .container p {
 
 .problemas-section {
   padding: 60px 20px;
-  background-color: #1d1d1d;
+  background-color: #f9f9f9;
   text-align: center;
 }
-#terapia {
-  background-color: #1d1d1d;
-}
-#p22 {
-  font-size: 1.3rem;
-  color: #000;
-  padding-bottom: 20px;
-}
+
 .second-section {
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
+  background-color: var(--verde-salvia);
 }
-.problemas-section.second-section h2 {
-  background: linear-gradient(to left, #1d1d1d, rgb(78, 105, 78));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 3rem;
-  text-transform: uppercase;
-  line-height: 1;
-}
-.second-section .problemas-header p {
-  background: linear-gradient(to left, #1d1d1d, rgb(78, 105, 78));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 1.8rem;
-  text-transform: uppercase;
-}
-
-
 .problemas-header {
   padding: 40px 4%;
-  max-width: 1100px;
+  max-width: 1020px;
   margin: 0 auto;
 }
 .problemas-header h2 {
-  text-transform: uppercase;
-  font-size: 3rem;
-  line-height: 1;
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.problemas-header p {
-  background: linear-gradient(to right, #fff, rgb(240, 242, 240));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: none;
-    font-size: 1.4rem;
+  font-size: 2rem;
+  margin-bottom: 40px;
+  color: #333;
 }
 
 .problemas-grid {
@@ -534,50 +467,59 @@ footer .container p {
     font-weight: 500;
 }
 
-
+.sobre {
+  background-color: #1d1d1d9d;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .problemas-section {
   background-color: var(--verde-musgo-palido);
 }
 .beneficios {
   text-align: center;
 }
-
-#sobre {
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-}
-
-.sobre .container .btn {
+.flex-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 40px;
   
+}
+.sobre .container .btn {
+  max-width: 330px;
+  margin: 20px auto;
   text-align: center;
-  width: fit-content;
 }
 
 .sobre .container {
-  background-color: #1d1d1d;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  background-color: #c9dabf;
+  border-radius: 15px;
   padding: 20px;
   flex: 1 1 60%;
   position: relative;
   z-index: 1;
   justify-content: center;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
-
-
+.sobre .flex-container .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+} 
 .sobre .container p {
   width: 100%;
-  background: linear-gradient(to right, #fff, rgb(240, 242, 240));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: none;
+  color: var(--marrom-textual-suave);
 }
 .sobre .container h2 {
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: none;
+  color: var(--marrom-textual-suave);
 }
 .sobre-img-wrapper {
   position: relative;
@@ -585,13 +527,14 @@ footer .container p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 120px;
+  
   
 }
 
 .sobre-img {
   width: 340px;
   height: 340px;
+  
   border-radius: 50%;
   background-color: var(--marinho-sutil);
   border: 6px solid rgb(19, 255, 19);
@@ -609,18 +552,15 @@ footer .container p {
 }
 .sobre-img span {
   width: 100%;
-  max-width: fit-content;
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  line-height: 1;
+  max-width: 380px;
+  background-color: white;
+  font-size: 23px;
   margin-top: -30px;
   z-index: 1;
   border-radius: 12px;  
   box-shadow: 3px 5px 3px #000;
   padding: 10px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
+  
 }
 
 .sobre-img img {
@@ -637,7 +577,9 @@ footer .container p {
   width: 100%;
   line-height: 1.1;
 }
-
+.elfsight a {
+  display: none;
+}
 /* Responsivo para telas menores */
 @media (max-width: 768px) {
   .flex-container {
@@ -706,14 +648,16 @@ footer .container p {
 
 
 .sobre h2 {
-  font-size: 3rem;
+  font-size: 48px;
 }
 .sobre p {
-  font-size: 1.4rem;
-  text-align: center;
+  font-size: 24px;
 }
 
-
+.sobre h2, .sobre p {
+  color: var(--cinza-claro-neutro);
+  text-shadow: 1px 1px 1px var(--azul-acinzentado);
+}
 .metodo  h2 {
   font-size: 52px;
   color: var(--bege-neutro);
@@ -784,221 +728,166 @@ footer .container p {
   color: #666;
   font-size: 0.95em;
 }
-.benefit-text {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 30px;
-}
-.benefit-text h2 {
-  font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
-  text-align: center;
-  margin: 0;
-  font-size: 3rem;
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-.benefit-text p {
-  font-family: 'Poppins', sans-serif;
-  text-align: center;
-  margin: 0;
-  font-size: 1.8rem;
-  line-height: 1;
-  color: #fff;
-}
-.benefit-box {
-  display: flex;
-  font-family: 'Roboto', sans-serif;
-  gap: 2rem;
-  
-}
-.benefit-item {
-  box-shadow: 3px 5px 3px #fff;
-  border-radius: 15px;
-  padding: 20px;
-  text-align: center;
-  align-items: center;
-  color: #fff;
-  background: linear-gradient(to right, #c9dabf, rgb(138, 232, 138));
-   
-}
-.benefit-item h3 {
-  text-transform: uppercase;
-  font-weight: 500;
-  color: #000;
-}
 
-.psiterapia {
-  background: linear-gradient(to right, #1d1d1d, #1d1d1d);
-   
-}
-.psiterapia-container {
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
-  display: flex;
-  max-width: 1200px;
-  margin: 0 auto;
-  justify-content: space-between;
-  gap: 2rem;
-  border-radius: 15px;
+@media screen and (max-width: 1020px) {
   
-}
-.psiterapia img {
-  max-width: 300px;
-  border-radius: 12px;
-}
-.psiterapia-text h2 {
-  background: linear-gradient(to right, #1c1a1a, rgb(26, 234, 26));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-transform: uppercase;
-  line-height: 1;
-  font-size: 2.5rem;
-}
-.psiterapia-text p {
-  font-size: 1.4rem;
-  color: #000;
-  width: fit-content;
-}
-.psiterapia-text {
-  max-width: 1100px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 5px;
-}
-.psiterapia-text .btn {
-  margin: 0 auto;
-}
-
-@media screen and (max-width:1020px) {
   .hero {
-    width: 100%;
-  }
-  .hero-containers {
+    max-width: 100%;
     display: flex;
     flex-direction: column;
-    width: 100%;
   }
   .hero .container {
-    max-width: 1020px;
-    padding: 10px;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
   .hero .container h1 {
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
   .hero .container p {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
+  }
+  .hero .container-2 {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero .container-2 img {
+    max-width: 300px;
   }
 
-  .benefit-text h2 {
-    line-height: 1;
-    font-size: 1.8rem;
-  }
-  .benefit-text p {
-    font-size: 1.3rem;
-  }
-  .benefit-box {
-    display: flex;
-    flex-wrap: wrap;
-  }
+  /*Fim do hero - inicio do Sobre*/
   .sobre {
-    width: 100%;
     max-width: 100%;
-  }
-  .sobre .texto h2{
-    font-size: 2rem;
-    text-align: center;
-    line-height: 1;
-  }
-  .sobre .texto p {
-    line-height: 1;
-    text-align: left;
-  }
-  .video-section {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 0;
   }
-  .video-section .problemas-header  h2{
+  .sobre .flex-container {
+    max-width: 100%;
+    width: 100%;
+  }
+  .sobre .flex-container .container {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .sobre .flex-container .container .texto {
     padding: 0;
     margin: 0;
-    font-size: 1.3rem;
     width: 100%;
-  }
-  .video-section .problemas-header p {
-    line-height: 1;
-    font-size: 1.2rem;
-  }
-  .video video {
-    width: 100%;
-  }
-
-  .problemas-section.first-section h2, 
-  .problemas-section.second-section h2 {
-    line-height: 1;
-    font-size: 1.6rem;
-    text-align: center;
-  }
-  .problemas-section.first-section p, 
-  .problemas-section.second-section p
-  {
-    line-height: 1;
-    font-size: 1.3rem;
-    text-align: center;
-    color: #fff;
-    line-height: 1;
-  }
-  .psiterapia {
-   
-    padding: 10px;
-  }
-  .psiterapia-container{
-    flex-direction: column-reverse;
-    padding: 10px;
-  }
-  .psiterapia-container h2 {
-    font-size: 1.6rem;
-    text-align: center;
-    line-height: 1;
-  }
-  .psiterapia-container p {
-    font-size: 1.3rem;
-    line-height: 1;
-    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
   }
-  .psiterapia-container img {
+
+
+  /*Fim do sobre - inicio do video-section*/
+  .video-section .video video {
+    max-width: 100%;
+  }
+
+  .beneficios h2 {
+    color: white;
+    padding: 0;
+    margin: 0;
     width: 100%;
+    line-height: 1;
+    font-size: 100%;
+  }
+
+  .metodo .container {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .metodo .container h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 28px;
+    width: 100%;
+  }
+  .metodo .container p {
+    max-width: 100%;
     margin: 0 auto;
   }
-  .psiterapia-container.btn {
-    font-size: 1rem;
+  .first-section {
+    background-color: #000;
+    color: #f4f1ed;
   }
-  .faq-section h2 {
+  .first-section h2 {
+    color: #fff;
+  }
+  .problemas-section.second-section {
+    background-color: var(--verde-salvia);
+    color: #f9f9f9;
+    font-weight: 500;
+    text-shadow: 1px 1.1px 1px #000;
+  }
+  .problemas-section.second-section h2 {
+    color: #f5f5f5;
+    text-shadow: 1px 1.4px 1px #000;
+  }
+
+  .problemas-header {
+    padding: 0;
+    margin: 0;
+  }
+  .problemas-header h2 {
+    font-size: 1.4rem;
     line-height: 1;
+    text-transform: uppercase;
   }
-  .faq-question {
-    text-align: left;
+  .problemas-header p {
+    font-size: 20px;
+    width: 100%;
+    margin: 0;
   }
-  footer {
+
+  .cta .container {
+    max-width: 100%;
+    display: flex;
     flex-direction: column;
   }
-  footer .container p {
-    font-size: 1rem;
-    line-height: 1;
+
+  #contato {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+  }
+  #contato .container form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .redes-sociais {
+    max-width: 100%;
   }
   .redes-sociais h2 {
-    line-height: 1;
+    color: white;
+    text-align: center;
+    
   }
-  .midias {
-    flex-direction: column;
+  .redes-sociais a {
+    background-color: #a8c3a0;
+    border: none;
+    box-shadow: 3px 5px 3px #2d2d2d;
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
   }
-}
-.elfsight {
-  background: linear-gradient(to right, #fff, rgb(138, 232, 138)); 
-  margin: 0 auto;
-}
-.elfsight a {
-  display: none;
 }
