--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ body {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  padding-top: 75px;
 }
 
 /* Navbar */
@@ -97,6 +98,7 @@ nav.navbar {
   font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
   transition: transform 0.3s ease, background-color 0.3s ease;
+  
 }
 
 /* Logo com gradiente */
