--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ nav a:hover {
     width: 260px;
     background-color: #1d1d1d;
     padding: 80px 20px;
-    text-align: left;
+    text-align: right;
     z-index: 1200;
     transition: right 0.3s ease;
   }
@@ -187,7 +187,7 @@ nav a:hover {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1100;
+    z-index: 800;
     display: none;
   }
   .menu-overlay.active {
