--- a/style.css
+++ b/style.css
@@ -197,17 +197,21 @@ nav a:hover {
 
 
 .btn {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   background-color: #4CAF50;
   color: #fff;
-  padding: 12px 25px;
+  padding: 12px;
   border: none;
-  border-radius: 5px;
+  border-radius: 25px;
   text-decoration: none;
   transition: background-color 0.3s ease;
   box-shadow: 3px 5px 3px #1d1d1d;
   margin-top: 40px;
   width: fit-content;
+  margin: 20px auto;
 }
 
 .btn:hover {
@@ -428,8 +432,8 @@ footer .container p {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 40%;
-  background: linear-gradient(to , rgba(255, 255, 200, 0.6), transparent);
+  height: 0%;
+  background: linear-gradient(to top, rgba(68, 68, 56, 0.6), transparent);
   pointer-events: none;
   z-index: 2;
 }
@@ -440,7 +444,27 @@ footer .container p {
     filter: drop-shadow(0 20px 30px rgba(168, 195, 160, 0.6)); /* brilho verde suave abaixo */
 
 }
-
+.positive-infos {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+}
+.positive-infos li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background-color: transparent;
+  border: 1px solid rgb(138, 232, 138);
+  border-radius: 15px;
+  padding: 10px;
+  width: fit-content;
+  font-size: 12px;
+  background: linear-gradient(to top, rgba(112, 173, 95, 0.6), transparent);
+}
 .problemas-section {
   padding: 60px 20px;
   background-color: #1d1d1d;
@@ -925,6 +949,9 @@ footer .container p {
   }
   .hero .container p {
     font-size: 1.3rem;
+  }
+  .positive-infos {
+    flex-wrap: wrap;
   }
   .sobre {
     display: flex;
